--- a/index.html
+++ b/index.html
@@ -101,11 +101,9 @@
       <div class="logo">Your Logo</div>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#">Salesforce Service</a></li>
+          <li><a href="#">Why Us</a></li>
+          <li><a href="#">Contact Us</a></li>
         </ul>
       </nav>
     </div>
