--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
     }
     /* Header styles */
     header {
-      background: #0056b3; /* Blue background */
+      /*background: #0056b3; /* Blue background */
       color: #fff;
       padding: 20px 0;
+    }
+    .gradient-bar{
+    width: 100%;
+    height: 1vh;
+    background: linear-gradient(90deg, #FAEF60 0%, #8FE3DE 17.19%, #8FE3DE 100%);
     }
     .header-container {
       width: 90%;
@@ -97,6 +102,7 @@
 <body>
   <!-- Header Section -->
   <header>
+    <div class="gradient-bar"></div>
     <div class="header-container">
       <div class="logo">Your Logo</div>
       <nav>
