--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     header {
       /*background: #0056b3; /* Blue background */
       color: #fff;
-      padding: 20px 0;
+      /*padding: 20px 0;*/
     }
     .gradient-bar{
     width: 100%;
