--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     /* Header styles */
     header {
       /*background: #0056b3; /* Blue background */
-      color: #fff;
+      color: #FFFFFF;
       /*padding: 20px 0;*/
     }
     .gradient-bar{
