--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
   <header>
     <div class="gradient-bar"></div>
     <div class="header-container">
-      <div class="logo">Your Logo</div>
+      <div class="logo">
+        <img src="StaysIO.jpg" alt="Stays IO Logo" class="logo">
+      </div>
       <nav>
         <ul>
           <li><a href="#">Salesforce Service</a></li>
