--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="gradient-bar"></div>
     <div class="header-container">
       <div class="logo">
-        <img src="StaysIO.jpg" alt="Stays IO Logo" class="logo">
+        <img src="Logo Kiks Tech.png" alt="Kiks Tech Logo" class="logo">
       </div>
       <nav>
         <ul>
