--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
       align-items: center;
     }
     .logo {
-      font-size: 24px;
-      font-weight: bold;
+      max-width: 200px;
+      margin: 10px auto;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     }
     nav ul {
       display: flex;
