--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,23 +12,27 @@
       padding: 0;
       box-sizing: border-box;
     }
+
     body {
       font-family: Arial, sans-serif;
       background: #fff;
       color: #333;
       line-height: 1.6;
     }
+
     /* Header styles */
     header {
       /*background: #0056b3; /* Blue background */
       color: #FFFFFF;
       /*padding: 20px 0;*/
     }
-    .gradient-bar{
-    width: 100%;
-    height: 1vh;
-    background: linear-gradient(90deg, #FAEF60 0%, #8FE3DE 17.19%, #8FE3DE 100%);
+
+    .gradient-bar {
+      width: 100%;
+      height: 1vh;
+      background: linear-gradient(90deg, #FAEF60 0%, #8FE3DE 17.19%, #8FE3DE 100%);
     }
+
     .header-container {
       width: 90%;
       max-width: 1200px;
@@ -36,23 +41,31 @@
       justify-content: space-between;
       align-items: center;
     }
+
     .logo {
-      max-width: 200px;
-      margin: 10px auto;
+      width: 179px;
+      height: 31px;
+      background: url("Logo\ Kiks\ Tech.png") no-repeat 0 0;
+      display: block;
+      text-indent: -999em;
     }
+
     nav ul {
       display: flex;
       gap: 20px;
       list-style: none;
     }
+
     nav ul li a {
       color: #fff;
       text-decoration: none;
       transition: color 0.3s;
     }
+
     nav ul li a:hover {
       color: #a6c8ff;
     }
+
     /* Hero section (optional) */
     .hero {
       background: url('your-hero-image.jpg') no-repeat center center/cover;
@@ -61,11 +74,13 @@
       justify-content: center;
       align-items: center;
       color: #fff;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
     }
+
     .hero h1 {
       font-size: 48px;
     }
+
     /* Main content area */
     main {
       width: 90%;
@@ -73,47 +88,51 @@
       margin: 40px auto;
       padding: 20px 0;
     }
+
     /* Footer styles */
     footer {
       background: #f1f1f1;
       color: #333;
       padding: 20px 0;
     }
+
     .footer-container {
       width: 90%;
       max-width: 1200px;
       margin: 0 auto;
       text-align: center;
     }
+
     .footer-links {
       margin-bottom: 10px;
     }
+
     .footer-links a {
       color: #0056b3;
       margin: 0 10px;
       text-decoration: none;
       transition: color 0.3s;
     }
+
     .footer-links a:hover {
       color: #003f7f;
     }
   </style>
 </head>
+
 <body>
   <!-- Header Section -->
   <header>
     <div class="gradient-bar"></div>
     <div class="header-container">
-      <div class="logo">
-        <img src="Logo Kiks Tech.png" alt="Kiks Tech Logo" class="logo">
-      </div>
-      <nav>
-        <ul>
-          <li><a href="#">Salesforce Service</a></li>
-          <li><a href="#">Why Us</a></li>
-          <li><a href="#">Contact Us</a></li>
-        </ul>
-      </nav>
+      <a hrf="" alt="Kiks Tech Logo" class="logo">
+        <nav>
+          <ul>
+            <li><a href="#">Salesforce Service</a></li>
+            <li><a href="#">Why Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </nav>
     </div>
   </header>
 
@@ -143,4 +162,5 @@
     </div>
   </footer>
 </body>
+
 </html>
