--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     .logo {
       width: 179px;
       height: 31px;
-      background: url("Logo\ Kiks\ Tech.png") no-repeat 0 0;
+      background: url("Logo Kiks Tech.png") no-repeat 0 0;
       display: block;
       text-indent: -999em;
     }
@@ -142,15 +142,7 @@
   <header>
     <div class="gradient-bar"></div>
     <div class="header-container">
-      <a hrf="" alt="Kiks Tech Logo" class="logo">
-        <nav>
-          <ul>
-            <li><a href="#">Salesforce Service</a></li>
-            <li><a href="#">Why Us</a></li>
-            <li><a href="#">Contact Us</a></li>
-          </ul>
-        </nav>
-      <a hrf="" alt="Kiks Tech Logo" class="logo">
+      <a href="#" class="logo">Kiks Tech</a>
         <nav>
           <ul>
             <li><a href="#">Salesforce Service</a></li>
