--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     .logo {
       width: 179px;
       height: 31px;
-      background: url("Logo\ Kiks\ Tech.png") no-repeat 0 0;
+      background: url("/images/Logo.png") no-repeat 0 0;
       display: block;
       text-indent: -999em;
     }
