--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     }
 
 
-    /* Hero section (optional) */
+    /* Hero section (optional) ******/
     .hero {
       background: url('your-hero-image.jpg') no-repeat center center/cover;
       height: 300px;
