Remove folder image

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     .logo {
       width: 179px;
       height: 31px;
-      background: url("/images/Logo.png") no-repeat 0 0;
+      background: url("/Logo.png") no-repeat 0 0;
       display: block;
       text-indent: -999em;
     }
@@ -179,6 +179,4 @@
     </div>
   </footer>
 </body>
-
-
 </html>
