--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     /* Hero section (optional) ******/
     .hero {
-      background: url('your-hero-image.jpg') no-repeat center center/cover;
+      /*ackground: url('your-hero-image.jpg') no-repeat center center/cover;*/
       height: 300px;
       display: flex;
       justify-content: center;
