--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> Kiks Tech</title>
+  <title>Kiks Tech</title>
   <style>
     /* Reset some default styles */
     * {
@@ -12,7 +12,6 @@
       box-sizing: border-box;
     }
 
-
     body {
       font-family: Arial, sans-serif;
       background: #fff;
@@ -20,19 +19,17 @@
       line-height: 1.6;
     }
 
-
     /* Header styles */
     header {
-      /*background: #0056b3; /* Blue background */
+      /* background: #0056b3;  Blue background */
       color: #FFFFFF;
-      /*padding: 20px 0;*/
+      /* padding: 20px 0; */
     }
     .gradient-bar {
       width: 100%;
       height: 1vh;
       background: linear-gradient(90deg, #FAEF60 0%, #8FE3DE 17.19%, #8FE3DE 100%);
     }
-
 
     .header-container {
       width: 90%;
@@ -43,15 +40,13 @@
       align-items: center;
     }
 
-
     .logo {
       width: 179px;
       height: 31px;
-      /*background: url("/Logo.png") no-repeat 0 0;*/
+      /* background: url("/Logo.png") no-repeat 0 0; */
       display: block;
       text-indent: -999em;
     }
-
 
     nav ul {
       display: flex;
@@ -59,36 +54,30 @@
       list-style: none;
     }
 
-
     nav ul li a {
       color: #fff;
       text-decoration: none;
       transition: color 0.3s;
     }
 
-
     nav ul li a:hover {
       color: #a6c8ff;
     }
 
-
-    /* Hero section (optional) ******/
+    /* Hero section (optional) */
     .hero {
-      /*ackground: url('your-hero-image.jpg') no-repeat center center/cover;*/
+      /* background: url('your-hero-image.jpg') no-repeat center center/cover; */
       height: 300px;
       display: flex;
       justify-content: center;
       align-items: center;
       color: #fff;
       text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
     }
-
 
     .hero h1 {
       font-size: 48px;
     }
-
 
     /* Main content area */
     main {
@@ -98,14 +87,12 @@
       padding: 20px 0;
     }
 
-
     /* Footer styles */
     footer {
       background: #f1f1f1;
       color: #333;
       padding: 20px 0;
     }
-
 
     .footer-container {
       width: 90%;
@@ -114,11 +101,9 @@
       text-align: center;
     }
 
-
     .footer-links {
       margin-bottom: 10px;
     }
-
 
     .footer-links a {
       color: #0056b3;
@@ -127,27 +112,24 @@
       transition: color 0.3s;
     }
 
-
     .footer-links a:hover {
       color: #003f7f;
     }
   </style>
 </head>
-
-
 <body>
   <!-- Header Section -->
   <header>
     <div class="gradient-bar"></div>
     <div class="header-container">
       <a href="/index.html" class="logo">Kiks Tech</a>
-        <nav>
-          <ul>
-            <li><a href="#">Salesforce Service</a></li>
-            <li><a href="#">Why Us</a></li>
-            <li><a href="#">Contact Us</a></li>
-          </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="#">Salesforce Service</a></li>
+          <li><a href="#">Why Us</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
 
