--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     .logo {
       width: 179px;
       height: 31px;
-      /* background: url("/Logo.png") no-repeat 0 0; */
+      background: url("kikstechlogo.png") no-repeat 0 0; */
       display: block;
       text-indent: -999em;
     }
@@ -66,7 +66,7 @@
 
     /* Hero section (optional) */
     .hero {
-      /* background: url('your-hero-image.jpg') no-repeat center center/cover; */
+      background: url('kikstechlogo.png') no-repeat center center/cover;
       height: 300px;
       display: flex;
       justify-content: center;
