--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
     .logo {
       width: 964px;
       height: 872px;
-      background: url("kikstechlogo.png") no-repeat 0 0; */
-      display: block;
-      text-indent: -999em;
+      background: url("kikstechlogo.png") no-repeat 0 0;
     }
 
     nav ul {
