--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
     /* Header styles */
     header {
+      width: 2000px;
+      height: 100px;
       /* background: #0056b3;  Blue background */
       color: #FFFFFF;
       /* padding: 20px 0; */
