--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     .logo {
       width: 964px;
       height: 872px;
-      background: url("kikstechlogo.png") no-repeat 0 0;
+      background: url("kikstechlogo.png") no-repeat center center/cover;
     }
 
     nav ul {
