--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       width: 964px;
       height: 872px;
       background: url("kikstechlogo.png") no-repeat 0 0;
+      text-indent: -999em;
     }
 
     nav ul {
@@ -55,7 +56,7 @@
     }
 
     nav ul li a {
-      color: #fff;
+      color: #050a16;
       text-decoration: none;
       transition: color 0.3s;
     }
