--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <header>
     <div class="gradient-bar"></div>
     <div class="header-container">
-      <a href="/index.html" class="logo">Kiks Tech</a>
+      <a href="/" class="logo">Kiks Tech</a>
       <nav>
         <ul>
           <li><a href="#">Salesforce Service</a></li>
