--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
       text-indent: -999em;
 
     }
-    
     .fL {
     float: left;
     }
+    .fR{
+      float:right;
+    }
     
-
     nav ul {
       display: flex;
       gap: 20px;
