--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
     }
 
     .header-container {
-      width: 90%;
-      max-width: 1200px;
+      margin: 0 15px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -72,7 +71,7 @@
     }
 
     nav ul li a{
-      color: #a6c8ff;
+      color: #050a16;
       display: inline-block; 
       padding: 0 10px; 
     }
