--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     }
 
     .header-container {
+      padding: 10px 0;
       margin: 0 15px;
       display: flex;
       justify-content: space-between;
